3.6/cloudhub/deploying-a-cloudhub-application.adoc
= Deploying a CloudHub Application
:keywords: cloudhub, cloud, deploy, manage

To deploy a CloudHub application, you simply upload it to CloudHub, and the platform automatically deploys your application. 

[TIP]
====
You can deploy an application to CloudHub directly from Anypoint Studio, or you can deploy it using the CloudHub console.

This page covers deployment via the console. For an example of deploying to CloudHub directly from Anypoint Studio, see the link:/documentation/display/current/Hello+World+on+CloudHub#HelloWorldonCloudHub-DeployingandRunningYourProject[Hello World on CloudHub Tutorial]. 
====

== Creating an Application Domain

Every application requires a unique application domain name. The application domain identifies your application in CloudHub and also provides you with a public URL, `http://myapplicationdomain.cloudhub.io`, for accessing the application if it exposes any inbound endpoints.

To create a new application, click  the *Add application* button on the CloudHub console. On the *Add application* dialog, enter a unique application domain name. Valid domain names must start with a letter, may contain alphanumeric characters and dashes, and contain fewer than 42 characters. If the name is valid, CloudHub alerts you whether it is available or already reserved by another user.

image:/documentation/download/attachments/124879015/image2014-10-25+10%3A29%3A37.png?version=1&modificationDate=1426603422538[image]

== Configuring Application Settings

After you create your application domain, upload a new file for deployment. Click the *Choose file* button, select your application file, and  click *Open*. You can also click the *Get from sandbox* button to copy  a file from a non-production environment into your current environment. (If the *Get From Sandbox* button does not appear, you may first need to create a non-production environment to see this option.)

Next, you can select the *Mule Version* that you would like to deploy to, using the drop-down menu.

image:/documentation/download/attachments/124879015/image2014-10-25+10_37_41.png?version=1&modificationDate=1426603422583[image]

== Worker Sizing

Allocate an amount and a size for the *workers* of your application. On each application, workers are responsible for executing your application logic. 

There are 5 different worker sizes to choose from, with the compute and memory capacities described in the following table:

[cols="6*",]
|===
|*Worker Sizes* a|
0.1 vCores

500 MB Mem

 a|
0.2 vCores +

1 GB Mem

 a|
1 vCores +

1.5 GB Mem

 a|
2 vCores +

3.5 GB Mem

 a|
4 vCores +

7.5 GB Mem

|===

Workers that share vCores offer limited CPU and IO for smaller work loads, with burst capacity of up to 1 CPU.

To select the worker size and amount of each, select options from the drop-down menu to configure the computing power that you need:

image:/documentation/download/attachments/124879015/image2014-10-25+10_38_40.png?version=1&modificationDate=1426603422590[image]

Depending on how many vCores your account possesses, some of these options may not be eligible, as you may not have enough available capacity.

[IMPORTANT]
If you select more vCores than are available in your account, CloudHub allows you to create the application using the console, but you cannot start your application until vCores are available.

When deploying an application with more than one worker, CloudHub automatically load-balances any incoming traffic across your allocated workers. For more information, see link:/documentation/display/current/CloudHub+Fabric[CloudHub Fabric].

== Advanced Application Options

Click  *Advanced* to view additional deployment options.

image:/documentation/download/attachments/124879015/advanced+options+2.png?version=1&modificationDate=1426603422141[image]

=== Region

If you have global deployment enabled on your account, you can change the *Region* to which your application deploys using the drop-down menu. Administrators can link:/documentation/display/current/Managing+CloudHub+Specific+Settings[set the default region] on the Organization tab in Account Settings, but that region can be adjusted here when the application is deployed, if necessary.

* *Europe* - Applications deployed to Europe automatically have their domain updated to `http://myapplicationdomain.eu.cloudhub.io`. 
* *Australia* - Applications deployed to Australia automatically have their domain updated to `http://myapplicationdomain.au.cloudhub.io.`

=== Secure Data Gateway Enabled

Check this box if your application has a link:/documentation/display/current/Secure+Data+Gateway[secure data gateway] attached to it.

=== Persistent Queues

Check this box to enable persistent queues on your application. Persistent queues protect against message loss and allow you to distribute workloads across a set of workers. Before you can take advantage of persistent queueing, your application needs to be set up to use queues. See link:/documentation/display/current/CloudHub+Fabric[CloudHub Fabric] for more information.

=== Automatic Restart

Check *Automatically restart application when not responding*. With this box checked, CloudHub automatically restarts your application when the monitoring system discovers a problem with your application. If this box is not checked, CloudHub produces all the log messages, notifications, and any configured alerts, but takes no action to restart the application. 

Read more about link:/documentation/display/current/Worker+Monitoring[worker monitoring].

=== Application Properties

You can also optionally specify certain properties that may be required by your application. This allows you to externalize important pieces of configuration which may switch depending on the environment in which you're deploying. For example, if you're using a Mule application locally, you might configure your database host to be localhost. But if you're using CloudHub, you might configure it to be an Amazon RDS server.

To create an application property, expand the *Properties* section and set the variable by either using a text key=value format or by using the list format with two text boxes. After you've made the change, click the *Apply changes* button.

image:/documentation/download/attachments/124879015/image2014-10-25+10%3A42%3A42.png?version=1&modificationDate=1426603422576[image]

These application properties can be used inside your Mule configuration. For example:

[source, xml]
----
<spring:bean id="jdbcDataSource" class="org.enhydra.jdbc.standard.StandardDataSource" destroy-method="shutdown">
   <spring:property name="driverName" value="com.mysql.jdbc.Driver"/>
   <spring:property name="url"value="${database.url}"/>
</spring:bean>
----

If you also have the same properties set in a `mule-app.properties` file inside your application, the application property settings in CloudHub override mule-app.properties when your application is deployed.

Note that you can flag application properties as secure so that their values are not visible to users at runtime or passed between the server and the console. See link:/documentation/display/current/Secure+Application+Properties[Secure Application Properties] for more information.

== CloudHub Deployment

After you complete the previous steps, click *Create* and CloudHub uploads your application and automatically begins the deployment process. During this process, your view is switched to the link:/documentation/display/current/Viewing+Log+Data[log view] allowing you to monitor the process of your application deployment. This process could take several minutes. During the deployment, the application status indicator changes to yellow to indicate deployment in progress.

When deployment completes, the application status indicator changes to green and you are notified in the status area that the application has deployed successfully. Here's what appears in the logs:

[source]
----
Successfully deployed [mule application name]
----

== Deploy to CloudHub from Anypoint Studio

You can easily deploy your applications to CloudHub, straight from Anypoint Studio. This is specially helpful if you're still developing the application and want to deploy it often to an online test environment. To do this, left-click  the application in the package explorer, select *Cloudhub* > *Deploy to CloudHub*.

image:/documentation/download/thumbnails/124879015/studio+to+cloudhub4.png?version=1&modificationDate=1426603422619[image]

If this is your first time deploying in this way, a popup menu asks you to provide your login credentials for CloudHub. Your credentials are stored and used automatically the next time you deploy to CloudHub. You can manage these credentials through the Studio preferences menu, in *Anypoint Studio* > *Authentication*.

image:/documentation/download/attachments/124879015/studio+to+cloudhub3.png?version=1&modificationDate=1426603422612[image]

Once you have signed in, the Deploy to CloudHub menu opens. Choose a unique domain to deploy the application to, an environment and a Mule Version, you can also assign environment variables.

image:/documentation/download/attachments/124879015/studio+to+cloudhub2.png?version=1&modificationDate=1426603422605[image]

== Automatically Deploying a Proxy from the Anypoint Platform for APIs

If you've registered an API in the Anypoint Platform, you can easily run it through an auto-generated proxy to track its usage and implement policies. You can deploy this proxy to CloudHub without ever needing to go into the CloudHub section of the Anypoint platform. From a menu in the API version page, you can trigger the deployment of your proxy and set up the application name in CloudHub, the CloudHub environment and the Gateway version to use. Then, you can optionally access the CloudHub deployment menu for this proxy and configure advanced settings. link:/documentation/display/current/Proxying+Your+API[Read More].

== Deployment Errors

If an error occurs and the application cannot be deployed, the application status indicator changes to red. You are alerted in the status area that an error occurred. Please check the link:/documentation/display/current/Viewing+Log+Data[log details] for any application deployment errors. You need to correct the error, upload the application, and deploy again.

== See Also

* You can also deploy applications directly from link:/documentation/display/current/Hello+World+on+CloudHub[Anypoint Studio] or the link:/documentation/display/current/Command+Line+Tools[Command Line Tools]. A complete set of link:/documentation/display/current/CloudHub+API[REST APIs] are also available for deployment.
* link:/documentation/display/current/Managing+CloudHub+Applications[Managing CloudHub Applications] contains more information on how to manage your CloudHub application, make changes, scale workers, and perform other application management tasks.
